# gridwm-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: data.yaml  model.yaml  model_v2.yaml  train.yaml
data/: graph_ieee39.h5  manifest.json  norm_stats.json  splits.json
data/raw/: 00a1b72eed5a.h5  00a4f9b1407e.h5  00b170523a62.h5  010acaf620a9.h5  0192f4fd16e8.h5  01bdf8117ef2.h5  022e88ebe19f.h5  02b955a21984.h5  02d92fa20d89.h5  03461007614f.h5  03772fb3b7ed.h5  03d828f17e49.h5  04370c1d599c.h5  04f247083c42.h5  052c61542fa8.h5  0553cf8dae5d.h5  05620081fa53.h5  05d9edf5bb06.h5  05f0335f8a3a.h5  066419dd70a0.h5  0694dd16fdcb.h5  06c8abee5b80.h5  073f3376b8d8.h5  07fca465b5c9.h5  0854d5e6c07f.h5  08a0cb569ca5.h5  08f4698453b5.h5  09181f60a5f3.h5  093a5c6c439b.h5  0942df4ff2fa.h5  096d189aa1fc.h5  09b79643e6d5.h5  0a480dfbbfed.h5  0b0a0d36fd91.h5  0b13b304a663.h5  0b1c820699fa.h5  0b3ddce463e7.h5  0b572c3a7024.h5  0c2a1f9fbfb2.h5  0c2cdf2eda3d.h5  (+960 more)
docs/: cloudpss_pipeline.md  world_model_playground.html  world_model_playground_data.js
examples/cartpole_failure_foresight/: main.py
examples/power_grid_failure_foresight/: README.md
experiments/agent_benchmark/: comparison.md  eval_v4_2_ood.json  eval_v4_2_test.json  eval_v4_2_val.json
experiments/scenario_portfolio/: portfolio_sweep.md
scripts/: build_demo_anchors.py  build_placeholder_topology.py  compare_agent.py  compare_eval.py  compute_norm_stats.py  eval.py  eval_agent.py  export_playground_data.py  extract_topology.py  make_figure.py  make_report.py  plot_eval.py  rank_scenarios.py  serve_api.py  sweep_scenario_portfolio.py  train.py  train_agent.py
tests/: test_action_conditioning.py  test_agent.py  test_api.py  test_cartpole_world.py  test_cloudpss_helpers.py  test_collector.py  test_dataset.py  test_demo_run.py  test_latent_graph_wm.py  test_metrics.py  test_mpnn_forward.py  test_normalizer.py  test_portfolio_sweep.py  test_risk.py  test_scenario_search.py  test_schema.py  test_smoke.py  test_splits.py  test_world_base.py
wmagent/: __init__.py
(+37 files in other folders)
